# GithubNotifications

./: GithubNotifications.cabal  README.md  hie.yaml  stack.yaml
lib/GithubNotifications/: API.hs  Auth.hs  Notification.hs
src/: Main.hs
src/GithubNotifications/: API.hs  Auth.hs  Notification.hs
src/cli/: Main.hs
src/daemon/: Main.hs
