cabal-version:       2.2
name:                GithubNotifications
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CameronDiver/GithubNotifications#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Cameron Diver
maintainer:          cameron.diver94@gmail.com
copyright:           2020 Cameron Diver
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , text
  ghc-options:          -Wall
  default-extensions:   OverloadedStrings
                      , DeriveGeneric
                      , DuplicateRecordFields
                      , DeriveAnyClass

Library
  import:               shared-properties
  hs-source-dirs:       lib
  exposed-modules:      GithubNotifications.API
                      , GithubNotifications.Auth
                      , GithubNotifications.Notification
  build-depends:        wreq
                      , lens
                      , aeson
                      , pretty-terminal
                      , http-client
                      , utf8-string
                      , directory

executable github-notifications
  import:               shared-properties
  hs-source-dirs:       src/cli
  main-is:              Main.hs
  build-depends:        GithubNotifications
                      , wreq
                      , lens

executable github-notification-daemon
  import:               shared-properties
  hs-source-dirs:       src/daemon
  main-is:              Main.hs
  build-depends:        GithubNotifications
                      , firefly
                      , transformers
                      , aeson
                      , wai
                      , async
